3.6/develop/changelog.md

## 3.6.2版本 更新时间:2021-08-19

>3.0时代最后一个版本，主要是提高本地ocr的使用体验...

### 新增
- 翻译器上各翻译API的注册按钮，由原来的弹出本地教程文档，改为弹出在线文档的网页；

### 修复
- 本地ocr修复了安装时会报 'No module named 'cv2' 的问题;
- 本地ocr修复了安装时会报 'No module named 'paddle.fluid.core_noavx' 的问题;
- 翻译器修复了，如果挂了代理可能会导致无法注册和登录的问题；
- 翻译器修复了，本地ocr在识别到个别异体繁体字可能导致出错的问题；

### 优化
- 大幅度加快了本地ocr的识别速度;
- 本地ocr的识别准确度略有提高;
- 本地ocr对环境的适配稳定性更好了；
- 取消本地ocr安装时会输出一堆红色ERROR的吓人信息；


## 3.6版本 更新时间：2021-07-04

>这是团子更新过最难最累的版本.... 总算是解决了百度ocr被限额的问题....
>不说了... 大家能使用开心就好... _(:з」∠)_

### 新增
1. 新增了本地ocr，可替代百度的在线ocr；
2. 登录时对密码做了不可见处理；
3. 增加了屏蔽词和替换词功能，可对翻译的结果进行自定义屏蔽和替换；
4. 偷偷修复了一些不为人知的bug ....

## 3.5版本 更新时间：2020-10-08
>时隔了五个月 ... 团子终于更新了_(:з」∠)_
>因为工作了，上班了，成社畜了... 所以平时几乎没有时间去修复翻译器的问题
>献祭了一整个国庆不出去玩，终于完成了新版本的更新！真的很累！！！
>这是一个搭载了账号系统和服务器的版本，有了服务器，后面可以做很多事情 ~

### 新增
1. 新增可视化范围框，可手动隐藏
2. 新增自动保存翻译结果   【结果固定保存至: xxx\DangoTranslate-Ver3.5\Ver3.5\config\翻译历史.txt】
3. 加入了登录界面，账户功能   【船新的账号系统，后面可以延伸很多东西】
4. 加了可以锁定翻译界面的功能，锁定后翻译界面不可被操作
5. 新增可以导入导出配置文件的功能 ，直接切换账号就可以导入该账号的全部配置   【可以借人家号来玩了】

### 修复
1. 修复快捷键会失效的问题   【我不确定会不会还有问题 ....】
2. 修复了在高比例屏幕下，文字会过长不会自动分段的问题
3. 修复了手动翻译偶尔会卡死的问题
4. 点击翻译键时，上次选择的范围不会高亮且不可选择

### 优化
1. 优化网页版百度翻译的速度，归功于github上的@zxjlm大大技术支持
2. 优化了翻译时偶尔会出现的长时间等待问题，现在最多等待5秒不出结果就放弃
3. 优化了自动模式下偶尔会出现某句不翻译的问题
4. 优化了自动模式下，如果是动态画面，文字会不停闪动的问题   【依旧可能会闪动只是没那么高频】
5. 现在每次调用范围键后会自动翻译，无需再按一次翻译键

## 3.4版本 更新时间：2020-05-29
>大家好，我是胖次团子，欢迎使用我的团子翻译器 ~ ヾ(◍°∇°◍)ﾉﾞ
>为了让大家更好地透莲华，团子加班加点做好了3.4版本，请一定要更新和使用喔~


### 新增
1. 点击翻译界面的最小化后，翻译器会隐藏至右下角系统托盘；
2. 加入了程序启动音（Dango~）；

### 优化
1. 大大优化了翻译速度，多开翻译源时采用并行翻译。
    说明：假如你同时开了腾讯0.7s+百度1.1s+彩云0.8s，老版本需要2.6秒才会出翻译，新版本会在0.7秒先打印出腾讯翻译，1.1秒打印完全部翻译。
    3.4版本可同时打开所有翻译源，整体翻译时间约2s左右。
2. 翻译的时候，会根据文字内容，自动调整翻译框的大小，总之每次都会完整得显示完所有翻译的结果
3.  点击保存设置后，提示成功的弹窗现在优先级会高于翻译框，解决了之前被挡住点不到的问题；
4.  高精度和竖排模式用光额度后现在会给出准确的提示；
5.  修复了某些高缩放比例的屏幕下会导致点击不到设置页面的保存按键的问题；
6.  更换背景图片现在会自动根据翻译界面的尺寸自动缩放和适配；

### 修复
1. 修复了3.3版本翻译有时候会消失的问题；
2. 修复了频繁弹出ocr代理错误的问题；
3. 修复了点击充电按钮时，会自动关闭翻译界面的bug





## 3.3版本 更新时间：2020-05-07
>因为3.2版本发布后语音朗读功能和代理问题出现了bug，所以又紧急修复了这些地方，发布了3.3版本
>团子的不细心在这里和大家抱歉~

### 新增
1. 新增了屏蔽词汇的功能，现在可以屏蔽识别到的一些奇怪的符号和不想看到的词汇~
   具体怎么操作屏蔽功能，请看教程文档里的第17条~
2. 新增了一个查询查错用的exe，你们平时用不到啦，只是遇到bug的时候，方便打印出错误给我检查修复而已~

### 优化
1. 现在打开设置页面时，翻译界面不会消失了，可以同屏显示，更方便大家调试设置~

### 修复
1. 修复了语音朗读只能在每次打开翻译器的时候读一次的问题；
2. 修复了翻译器在日区等非简中环境下会错误报出代理异常的问题（其实是因为不是纯英文路径）；
3. 修复了当OCR出现问题时，翻译器不能正常打印错误情况在显示界面的问题；





## 3.2版本 更新时间：2020-05-04
>大家好，我是胖次团子，欢迎使用我的团子翻译器 ~ ヾ(◍°∇°◍)ﾉﾞ
>经过长时间争当熬夜冠军，3.2版本终于做好了！

### 新增
1. 加入了【四个新翻译接口】：
   （1）谷歌翻译（网页版）  （2）腾讯翻译（网页版）  （3）Bing翻译（网页版）   （4）彩云翻译（私人版）
2. 新加入了对【竖排文本的翻译模式】，额度为每天500次。可以啃生肉本啦 ~
3.  新加入了【高精度翻译模式】，额度为每天500次。如果觉得识别效果不好，可以开启此功能，准确度极高~
4.  新加入了【语音播放功能】，可以朗读识别到的原文文本。如果看不懂翻译，那就听！什么？听不懂，滚去学日语！
5.  新加入了【截图键的快捷键】，可以用快捷键截图了
6. 【此条删除】翻译过的文本会自动保留在翻译框，可以查看刚刚翻译过的文本，最大是保存10次翻译结果
7. 【此条删除】翻译器在每次退出后会自动记录退出时的大小和位置，下次打开时按照上次状态
8.  添加屏蔽词功能，自定义屏蔽的某些字词，可以在翻译的时候过滤掉

### 优化
1. 采用散装文件方式，翻译器启动速度现在变得非常快了！
2. 优化了界面的美观，越来越好看了，嗯嗯，团子指自己~
3.  快捷键功能终极优化，支持几乎电脑所有的单键按钮作为快捷键，使用快捷键翻译体验极好，团子吹爆！
4.  现在支持日区电脑系统，以后再问我为什么日区系统打不开翻译器我就敲死你！
5.  修复了电脑缩放比例在125%时，打开翻译器会出现界面显示不正常的问题。
6.  现在字体颜色，可以选择是使用纯色实心字体，还是使用白底带颜色描边的字体了。
7. 【此条删除】翻译文本和原文文本的字体样式被分开了，可以给原文设定和译文不一样的字体样式。
8.  文字的大小设定幅度上调到了30号字，不要再和我吐槽字好小哦！
9.  自动翻译的时间间隔改为了0.1秒一个档次，最高是15秒

### 修复
1. 修复了右上角点叉叉会导致程序整个退出和崩溃的问题；
2. 修复了yeekit不能翻译英文的问题；
3. 修复了不能翻译韩文的问题；
4. 修复了经常性打不开翻译器，需要重新解压安装的问题；
5. 修复了百度ocr频繁弹出代理设置问题（大概，不保证100%不弹）；
6. 将弹窗提示改为显示在翻译界面，尽可能减少弹窗的污染。






## 3.1版本 更新时间：2020-03-22
### 新增
1. 新加入了三个公共翻译接口，yeekit、ALAPI、百度翻译网页版；
2. 新加入了韩语翻译；
3.  新加入单次复制识别到的文字到剪贴板的按钮（在主界面）；

### 优化
1. 自动翻译现在优化到了最快1秒翻译一次，具体还看自身网速决定；
2. 快捷键新增了ctrl和shift键作为键1配合使用；
3.  自动翻译现在搬到了主界面上，可以更方便地切换翻译模式；
4.  翻译的字体加了一圈荧光轮廓，使得文字效果更加清晰了；
5.  软件的鼠标样式改成了一串团子；
6.  现在翻译框可以随意调节任何方向的大小；
7.  现在软件会自动适配电脑屏幕缩放比例，不需要再手动填写设置；
8.  翻译界面的工具栏改为了自动隐藏；
9.  部分地方都改为了全新的样式，使得翻译器更有逼格了；

### 修复
1. 修复了各翻译频繁抽风弹窗的问题；
2. 修复了腾讯翻译在出错时不会弹出报错提示的问题；
3.  修复了在切换背景时主界面会出现白边的问题；
4.  修复了拖动翻译框会出现卡死的问题，现在翻译框的拖动更加随心所欲了；





## 3.0版本 更新时间：2020-02-25

>这次更新真的做了很久很辛苦，还希望大家喜欢的话给我充电支持一下，拜托了，爱你们 ~ (❁´◡`❁)*✲ﾟ*

1. 一个全新的框架和界面，彻底改变了以前的布局和格式；
2. 现在翻译框可以调节透明度，可以变成透明的翻译框了；
3.  取消了以坐标方式设置识别范围，现在可以直接鼠标拖出要翻译的范围；
4.  优化了有道翻译的翻译质量；
5.  新加入了彩云小泽翻译，不过用的是公交接口，容易抽风，慎用；
6.  新加入了金山词霸翻译，用的是公共接口，偶尔会抽风；
7.  现在每一种翻译都可以设置其字体样式、字体颜色、字体大小；
8.  现在可以选择是否在翻译框显示原文了；
9.  现在可以开启，自动将识别的原文复制到剪贴板上，方便大家粘贴使用；
10.  现在可以用快捷键了，不过因为用的是全局快捷键，会和自身电脑很多全局热键冲突，所以目前只支持的范围很小；
11.  现在可以自动以设置页面的背景了，背景分辨率以407 x 475时效果最佳；
12.  加入了打赏界面 (〃'▽'〃)








## 2.1版本 更新时间：2020-02-10

1. 彻底解决了自动翻译和手动翻译的卡顿问题，现在自动模式下可以随意拖动和操作；

2. 自动模式的刷新频率最低为2s，之前是3s，个人实测翻译2s下的实际速度为1.8秒左右，视个人网速可能有变化；

3.  现在可以翻译英文了；

4.  优化了翻译时的逻辑，现在会通过判断你的文本框图片是否产生变化来决定是否调用OCR并翻译，解决了画面无变化时候产生的重复调用，浪费额度问题；

5.  加入了所有窗口初始位置都是屏幕居中的设定，以前是窗口位置随意变化；

6.  优化了个别大小的字体，在翻译时最右边的字会被部分遮挡的问题；

7.  优化了个别时候翻译的文本会自动换行的问题；





## 2.0版本 更新时间：2020-02-06

1. 翻译主界面加长了一些，现在能显示更多的文字

2. 优化了自动翻译的逻辑，现在自动模式下，如果文字画面无变化，不会再重复调用翻译，避免了自动下挂机，或长时间未点击文字画面造成不必要的重复调用字符浪费

3.  翻译源由单选更改为可以多选了，有道、百度和腾讯可以同时翻译，方便对照理解

4.  百度翻译和腾讯翻译的API设置页面加入了一些额度的说明，以及加入了直接获取注册方法、查询额度的功能

5.  自动翻译时的频率由最小2s更改为3s，个人测试3s时的刷新时间为3-4s，根据个人电脑和网络不同可能略有差异

6.  加入了翻译文本的颜色自定义功能，可以自定义每种翻译和原文的显示颜色，方便同时翻译时直观区分

7.  加入了翻译框大小可以调节的功能

8.  加入了自定义翻译的字体样式，以及字体大小的功能，字体样式的种类取决于每个人电脑已安装的字体，需有喜欢的字体，可以另外在自己电脑安装后，便会显示在翻译器的字体样式里

9.  修改了范围设置页面，添加了4个坐标保存页面，方便玩不同游戏时只用第一次获取一次，之后可以直接切换，每个坐标都可以填入游戏名方便记录该坐标对应的游戏

10.  优化了自动模式的弹窗逻辑，现在不是真正意义上的错误是不会弹窗了